# controllers/Map.controller.js
@@ -1,5 +1,6 @@
 import axios from "axios"
-
+import { urlencoded } from "express";
+axios.defaults.headers.get['Content-Type'] = 'application/x-www-form-urlencoded';
 //TRẢ về lat long của 1 địa chỉ
 const findLocation = async (req, res) => {
     const { address, apiKey } = req.query;
@@ -10,10 +11,14 @@ const findLocation = async (req, res) => {
         });
     }
     try {
-        axios.get(`https://maps.googleapis.com/maps/api/geocode/json?address=${address}&key=${apiKey}`).then((response) => {
+        axios.get(encodeURI(`https://maps.googleapis.com/maps/api/geocode/json?address=${address}&key=${apiKey}`)).then((response) => {
             res.status(200).json({
-                data: response
+                data: response.data
             });
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
         })
     } catch (error) {
         res.status(error.status || 400).send({
@@ -31,11 +36,15 @@ const findPlaceWithTextQuery = async (req, res) => {
         })
     }
     try {
-        axios.get(`https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input=${inputPlace}&inputtype=textquery&fields=formatted_address%2Cname%2Crating%2Copening_hours%2Cgeometry%2Cicon%2Cphotos%2Cplace_id&key=${apiKey}`).then((response) => {
+        axios.get(encodeURI(`https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input=${inputPlace}&inputtype=textquery&fields=formatted_address%2Cname%2Crating%2Copening_hours%2Cgeometry%2Cicon%2Cphotos%2Cplace_id&key=${apiKey}`)).then((response) => {
             res.status(200).send({
-                data: response
+                data: response.data
             })
-        });
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
+        })
     } catch (error) {
         res.status(error.status || 400).send({
             message: error.message
@@ -53,11 +62,15 @@ const findImagesRefWithPlace = async (req, res) => {
         })
     }
     try {
-        axios.get(`https://maps.googleapis.com/maps/api/place/photo?photoreference=${photoRef}&maxwidth=600&key=${apiKey}`).then((response) => {
+        axios.get(encodeURI(`https://maps.googleapis.com/maps/api/place/photo?photoreference=${photoRef}&maxwidth=600&key=${apiKey}`)).then((response) => {
             res.status(200).send({
-                data: response
+                data: response.data
             })
-        });
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
+        })
     } catch (error) {
         res.status(error.status || 400).send({
             message: error.message
@@ -75,11 +88,15 @@ const findRefPlacesWithText = async (req, res) => {
         })
     }
     try {
-        axios.get(`https://maps.googleapis.com/maps/api/place/textsearch/json?query=${place}&key=${apiKey}`).then((response) => {
+        axios.get(encodeURI(`https://maps.googleapis.com/maps/api/place/textsearch/json?query=${place}&key=${apiKey}`)).then((response) => {
             res.status(200).send({
-                data: response
+                data: response.data
             })
-        });
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
+        })
     } catch (error) {
         res.status(error.status || 400).send({
             message: error.message
@@ -89,6 +106,7 @@ const findRefPlacesWithText = async (req, res) => {
 
 const findPlaceWithAutoComplete= async (req, res) => {
     const { place, apiKey } = req.query;
+  
     if (!place || !apiKey) {
         res.status(404).send({
             place: "Please enter a valid name place",
@@ -96,11 +114,18 @@ const findPlaceWithAutoComplete= async (req, res) => {
         })
     }
     try {
-        axios.get(`https://maps.googleapis.com/maps/api/place/autocomplete/json?input=${place}&language=vi_VN&types=geocode&key=${apiKey}`).then((response) => {
+        const uri=`https://maps.googleapis.com/maps/api/place/autocomplete/json?input=${place}&language=vi_VN&types=geocode&key=${apiKey}`;
+        var url=encodeURI(uri);
+        console.log(url);
+        axios.get(url).then((response) => {
             res.status(200).send({
-                data: response
+                data: response.data
             })
-        });
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
+        })
     } catch (error) {
         res.status(error.status || 400).send({
             message: error.message
@@ -116,11 +141,18 @@ const findPlaceWithAutoCompletePro= async (req, res) => {
         })
     }
     try {
-        axios.get(`https://maps.googleapis.com/maps/api/place/queryautocomplete/json?input=${place}&language=vi_VN&key=${apiKey}`).then((response) => {
-            res.status(200).send({
-                data: response
-            })
-        });
+        const uri=`https://maps.googleapis.com/maps/api/place/queryautocomplete/json?input=${place}&language=vi_VN&key=${apiKey}`;
+        const url=encodeURI(uri);
+        console.log(url);
+        axios.get(url).then((result) => {
+            res.status(200).json({
+                data: result.data
+              });
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
+        })
     } catch (error) {
         res.status(error.status || 400).send({
             message: error.message
@@ -128,6 +160,52 @@ const findPlaceWithAutoCompletePro= async (req, res) => {
     }
 }
 //https://maps.googleapis.com/maps/api/place/queryautocomplete/json?input=Khu du lịch bửu&language=vi_VN&key=AIzaSyAet8Mk1nPvOn_AebLE5ZxXoGejOD8tPzA
+
+//api chỉ đường
+const findGetRedirection=async (req, res) =>
+{
+//     https://maps.googleapis.com/maps/api/directions/json
+//   ?destination=place_id%3AChIJA01I-8YVhkgRGJb0fW4UX7Y
+//   &origin=place_id%3AChIJ685WIFYViEgRHlHvBbiD5nE
+//   &key=YOUR_API_KEY
+
+    //mode ={ driving(lái xe (mặc định)) ,walking (Đi bộ) ,bicycling (xe đạp), transit (chuyển tuyến) }
+    //avoid (tránh)={tolls (trạm thu phí),highways(đường cao tốc) ,ferries(phà)  }
+    //waypoints các điểm 
+    //&waypoints=via:San Francisco|via:Mountain View|...
+    const { destination,origin,apiKey ,mode,avoid,waypoints} = req.query;
+  
+    if (!origin || !apiKey || !destination) {
+        res.status(404).send({
+            place: "Please enter a valid name place",
+            apiKey: "API key required",
+            destination: "Destination is required"
+        })
+    }
+    try {
+        axios.get(encodeURI(`https://maps.googleapis.com/maps/api/directions/json
+        ?destination=${destination}
+        &mode=${mode}
+        &origin=${origin}
+        &avoid=${avoid}
+        &waypoints=via%3A${waypoints}
+        &key=${apiKey}`)).then((response) => {
+            res.status(200).send({
+                statusCode:response.status,
+                data: response.data
+            })
+        }).catch((err) => {
+            res.status(400).json({
+                data: err.message
+              });
+        })
+    } catch (error) {
+        res.status(error.status  || 400).send({
+            message: error.message
+        });
+    }
+}
 export {
-    findLocation,findPlaceWithTextQuery,findImagesRefWithPlace,findRefPlacesWithText,findPlaceWithAutoComplete,findPlaceWithAutoCompletePro
+    findLocation,findPlaceWithTextQuery,findImagesRefWithPlace,findRefPlacesWithText,findPlaceWithAutoComplete,findPlaceWithAutoCompletePro,
+    findGetRedirection
 }
