# routes/Map_routes.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { findImagesRefWithPlace, findLocation, findPlaceWithAutoComplete, findPlaceWithAutoCompletePro, findRefPlacesWithText } from "../controllers/Map.controller.js";
+import { findGetRedirection, findImagesRefWithPlace, findLocation, findPlaceWithAutoComplete, findPlaceWithAutoCompletePro, findRefPlacesWithText } from "../controllers/Map.controller.js";
 const router = express.Router();
 router.get('/findLatLongLocation', findLocation);
 router.get('/findAutoLocationByType',findPlaceWithAutoComplete);
@@ -7,4 +7,6 @@ router.get('/findRefPlacesWithText',findRefPlacesWithText);
 router.get('/findAutoLocation', findPlaceWithAutoCompletePro);
 //tìm hình ảnh của địa điểm
 router.get('/findImageLocation',findImagesRefWithPlace);
+//api chỉ đường
+router.get('/getDirection',findGetRedirection);
 export default router;
